hh-core/src/snapshots/hh_core__adapter__tests__codex_parse_response_item_message.snap
---
source: hh-core/src/adapter.rs
assertion_line: 3107
expression: snap_codex(&pr)
---
{
  "events": [
    {
      "blob_hash": null,
      "blob_size": null,
      "body_json": {
        "text": "Here is the solution"
      },
      "correlates": null,
      "kind": "agent_message",
      "session_id": "test-session-id",
      "step": null,
      "summary": "Here is the solution",
      "ts_ms": 1500
    }
  ],
  "is_assistant_message": true
}
